--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 </head>
 
 <body>
+  <div class="timer">
+   <span id="minute">00</span>:<span id="second">00</span>
+  </div>
+
+  </div>
   <div id="gameboard">
     <section class="homeScreen">
       <h1>Bem-vindo ao Jogo da memória Pokémon</h1>
       <p>Um projeto criado para colocar em prática alguns dos meus conhecimentos,
-         Você pode jogar com 1 ou 2 players, vence quem encontrar os pares no menor tempo possível.
+        Você pode jogar com 1 ou 2 players, vence quem encontrar os pares no menor tempo possível.
       </p>
       <div class="selectPlayers">
         <button class="selcPlay play1">#1 Player </button>
@@ -25,8 +30,9 @@
   </div>
 
   <div id="gameover">
-    <div>
+    <div class="restartText"> 
       <h2>Parabéns, você completou o jogo!!</h2>
+      <p>você terminou em <span class="minute">00m</span> : <span class="second">00s</span></p>
     </div>
     <button id="restart" onclick="restart()">Jogar Novamente</button>
   </div>
