--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-
 <html lang="pt">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <title>Jogo da memória Pokémon</title>
   <link rel="stylesheet" href="assets/styles/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <div class="songs">
+    <audio class="victory" src="./assets/songs/victory.mp3"></audio>
+    <audio class="welcome" loop src="./assets/songs/Welcome.mp3"></audio>
+    <audio class="Theme" loop src="./assets/songs/palletTownTheme.mp3"></audio>
+  </div>
   <div class="timer">
-   <span id="minute">00</span>:<span id="second">00</span>
+    <span id="minute">00</span>:<span id="second">00</span>
   </div>
 
   </div>
@@ -23,22 +27,22 @@
         Você pode jogar com 1 ou 2 players, vence quem encontrar os pares no menor tempo possível.
       </p>
       <div class="selectPlayers">
-        <button class="selcPlay play1">#1 Player </button>
-        <button class="selcPlay play2">#2 Player </button>
+        <button class="play">COMEÇAR</button>
+        
       </div>
     </section>
   </div>
 
   <div id="gameover">
-    <div class="restartText"> 
+    <div class="restartText">
       <h2>Parabéns, você completou o jogo!!</h2>
       <p>você terminou em <span class="minute">00m</span> : <span class="second">00s</span></p>
     </div>
     <button id="restart" onclick="restart()">Jogar Novamente</button>
   </div>
-
-  <script src="assets/script/game.js"></script>
-  <script src="assets/script/script.js"></script>
+  
+  <script src="assets/script/game.js" defer></script>
+  <script src="assets/script/script.js" defer></script>
 
 </body>
 
