--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="homeScreen">
       <h1>Bem-vindo ao Jogo da memória Pokémon</h1>
       <p>Um projeto criado para colocar em prática alguns dos meus conhecimentos,
-        Você pode jogar com 1 ou 2 players, vence quem encontrar os pares no menor tempo possível.
+       fique a vontade para testar e, caso queira, entre em contato e me diga o que achou do projeto.
       </p>
       <div class="selectPlayers">
         <button class="play">COMEÇAR</button>
